--- a/styles/index.css
+++ b/styles/index.css
@@ -6,13 +6,17 @@
 }
 
 body {
-    background-color: #c4d7b8;
+    background-image: url(../assets/backgroundflower4.jpg) ;
+    background-size: cover;
+    background-position: right;
+    background-repeat: no-repeat;
     color: #000;
-    margin: 0;
     padding: 0;
     text-align: center;
     overflow: hidden;
 }
+
+
 
 .app {
     height: 100vh;
@@ -37,6 +41,15 @@ body {
     margin: auto;
 }
 
+.picture{
+    display: inline-block;
+    background: #7a926c;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    margin: 5px 15px;
+}
+
 .parents-names {
     font-size: 0.65em;
     width: calc(50%);
@@ -50,11 +63,13 @@ body {
 .parents-names.left {
     float: left;
     text-align: left;
+    margin-bottom: 30px;
 }
 
 .parents-names.right {
     float: right;
     text-align: right;
+    margin-bottom: 30px;
 }
 
 .couple-names {
@@ -89,7 +104,7 @@ body {
     border-radius: 5px;
     margin-top: 25px;
     margin-bottom: 25px;
-    background-color: #b2cba3;
+    background-color: #7a926c;
 }
 
 .section .section-icon {
@@ -140,7 +155,7 @@ body {
     padding: 10px 20px 20px 20px;
     padding-bottom: 5px;
     border-radius: 4px;
-    background-color: #b2cba3;
+    background-color: #829e7265;
     margin-top: 15px;
 }
 
@@ -214,7 +229,7 @@ body {
 
 .quote {
     display: block;
-    margin: 20px 0 0 0;
+    margin: 20px 0 50px 0 ;
     font-weight: bold;
     font-style: italic;
     font-size: 1.2em;
