--- a/styles/plugins.css
+++ b/styles/plugins.css
@@ -51,7 +51,7 @@
     bottom: 12px;
     left: calc(50% - 19px);
     padding: 10px;
-    background: #a1c08e;
+    background: #7a926c;
     opacity: 0.8;
     transition: opacity .2s;
     z-index: 2;
