--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(../assets/backgroundflower4.jpg) ;
+    background-image: url(./backgroundflower4.jpg) ;
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
