Changin responsive for iphone 7

--- a/index.css
+++ b/index.css
@@ -221,7 +221,7 @@ body {
 
     .couple-names {
         word-spacing: 100vw;
-        margin-right: 50px;
+        display: inline-block;
     }
 }
 
