--- a/index.css
+++ b/index.css
@@ -223,6 +223,10 @@ body {
         word-spacing: 100vw;
         display: inline-block;
     }
+    .picture{
+        width: 75px;
+        height: 75px;
+    }
 }
 
 .justify {
