--- a/index.css
+++ b/index.css
@@ -239,12 +239,11 @@ body {
         word-spacing: 100vw;
         display: inline-block;
     }
-    .imgsection{
-        margin:0 auto;
-    }
     .img{
-        width: 90px;
-        height: 90px;
+        width: 95px;
+        height: 95px;
+
+        margin-right: -30px;
     }
     .act-link{
         color: #ffffff;
