--- a/index.css
+++ b/index.css
@@ -239,9 +239,15 @@ body {
         word-spacing: 100vw;
         display: inline-block;
     }
+    .picture-section-1{
+        margin-right: 3rem;
+    }
+    .picture-section-2{
+        margin-right: 3rem;
+    }
     .img{
-        width: 95px;
-        height: 95px;
+        width: 100px;
+        height: 100px;
 
         margin-right: -30px;
     }
